<resources>
    <string name="app_name">Calculator</string>
    <string name="button_c">C</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_divide">/</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_multiply">*</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_subtraction">-</string>
    <string name="button_0">0</string>
    <string name="button_point">,</string>
    <string name="button_addition">+</string>
    <string name="button_result">=</string>
    <string name="button_settings">Settings</string>
    <string name="Theme_text">Выберите тему приложения</string>
    <string name="Theme_switch">Светлая/тёмная</string>
    <string name="switch_off">Светлая</string>
    <string name="switch_on">Тёмная</string>
</resources>