<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:columnCount="4">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonFullClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ButtonType2"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_gravity="fill_horizontal"
        android:text="@string/button_c" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button7"
        style="@style/ButtonType1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button8"
        style="@style/ButtonType1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button9"
        style="@style/ButtonType1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDivide"
        style="@style/ButtonType1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_divide" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button4"
        style="@style/ButtonType1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button5"
        style="@style/ButtonType1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button6"
        style="@style/ButtonType1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonMultiply"
        style="@style/ButtonType1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_multiply" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button1"
        style="@style/ButtonType1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        style="@style/ButtonType1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button3"
        style="@style/ButtonType1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSubtraction"
        style="@style/ButtonType1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_subtraction" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button0"
        style="@style/ButtonType1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:text="@string/button_0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonPoint"
        style="@style/ButtonType1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_point" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonAddition"
        style="@style/ButtonType1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_addition" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ButtonType2"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_gravity="fill_horizontal"
        android:text="@string/button_result" />

</GridLayout>